# todoai

./: .gitignore  LICENSE  README.md  claude_desktop_config.json  setup.bat  setup.sh  start-dev.bat  start-dev.sh
app/: index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs
app/src/api/: client.ts
app/src/components/: AutoPlanButton.tsx  ChatBot.tsx  ConfirmModal.tsx  DataToolbar.tsx  DatePicker.tsx  DependencyGraph.tsx  DumpBox.tsx  FilterBar.tsx  GenerateContextButton.tsx  GeneratePlanButton.tsx  GoAiPlanFlow.tsx  KanbanBoard.tsx  MarkdownRenderer.tsx  NotificationBell.tsx  PlanFirstFlow.tsx  PlanPreview.tsx  SearchBar.tsx  ShortcutsHelp.tsx  SidebarProject.tsx  SortableTaskList.tsx  SuggestionsPanel.tsx  TaskForm.tsx  TaskItem.tsx  TerminalPanel.tsx  ThemeToggle.tsx  TitleBar.tsx  TriggerPickerModal.tsx
app/src/contexts/: DragContext.tsx  ProjectContext.tsx  ReactFlowContext.tsx  UndoContext.tsx
app/src/hooks/: useGlobalShortcuts.ts  useLiveSync.ts  useProjects.ts  useTasks.ts
app/src/pages/: DashboardPage.tsx  InboxPage.tsx  ProjectPage.tsx  TaskDetailPage.tsx  TodayPage.tsx
app/src/styles/: global.css  reactflow.css
app/src/types/: index.ts
app/src/utils/: dateFormat.ts  generateContext.ts  goai.ts  (+2 more)
backend/: requirements.txt  run.py
backend/app/: config.py  database.py  main.py  schemas.py
backend/tests/: test_cycle_detection.py  test_suggestions.py
mcp/: requirements.txt  server.py
(+18 files in other folders)
